language_tests/source_files/invalid/fstring_unterminated_interpolation.tr
func main() {
    let _ = f"{name"
}
